--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
-
 <html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{{ page.title }}</title>
+        <meta name="viewport" content="width=device-width">
 
-<head>
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/css/syntax.css">
 
- <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="/css/main.css">
 
- <title>{{ page.title }}</title>
+    </head>
+    <body>
 
-</head>
+        <div class="site">
+          <div class="header">
+            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+          </div>
 
-<body>
+          {{ content }}
 
- {{ content }}
+          <div class="footer">
+            <div class="contact">
+              <p>
+                <!-- 代码:<br /> -->
+                邮件:
+              </p>
+            </div>
+            <div class="contact">
+              <p>
+                <a href="mailto: @yahoo.com"> @yahoo.com</a>
+              </p>
+            </div>
+          </div>
+        </div>
 
-</body>
-
+    </body>
 </html>
